--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,9 +2,9 @@
 @import 'font.css';
 @import 'buttons.css';
 @import 'recipe-list.css';
+@import 'ingredient-list.css';
 @import 'recipe.css';
-@import 'ingredientList.css';
-@import 'recipeEdit';
+@import 'recipe-edit.css';
 
 *, *::before, *::after {
   font-family: Gotham Rounded, sans-serif;
